# sqlite-cryptovfs

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Makefile
include/: cryptovfs.h
libs/: CMakeLists.txt
src/: cryptofile.c  cryptofile.h  cryptovfs.c  cryptovfs.cpp  cryptovfs.h  sodium_memory.hpp  sqlite_memory.hpp  utils.hpp
test/: CMakeLists.txt  main.c
